# finAI

./: app.py  main.py  pyproject.toml  requirements.txt
demo/: demo.ipynb
