[project]
name = "finrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.8.0",
    "langchain>=1.3.7",
    "langgraph>=1.2.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "tavily-python>=0.7.26",
]
