[project]
name = "finrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.8.0",
    "ipython>=9.14.1",
    "langchain>=1.3.7",
    "langchain-core>=1.4.6",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "yfinance>=1.4.1",
]
